--- a/0/contact/index.html
+++ b/0/contact/index.html
@@ -4,13 +4,30 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Harikrishna Sahu </title>
+    <title> Harikrishna Sahu | Reserach scientist at Georgia Tech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Harikrishna Sahu is reserach scientist at Georgia Tech.">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body> 
     <header>
+        <div class="logo">
+            <img src="../images/header_photo_150.jpg" width="150" hight="148">
+        </div>
+        <div class="name">
+            <h1>Harikrishna Sahu</h1>
+            <p>Welcome to my Website!</p>
+        </div>
+        <nav class="right" role="navigation" arial-label="main menu">
+            <ul class="navbar">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../profile/index.html">Profile</a></li>
+                <li><a href="../research/index.html">Research</a></li>
+                <li><a href="../useful_information/index.html">Useful information</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
