--- a/0/index.html
+++ b/0/index.html
@@ -4,18 +4,23 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Harikrishna Sahu </title>
+    <title> Harikrishna Sahu | Reserach scientist at Georgia Tech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Harikrishna Sahu is reserach scientist at Georgia Tech.">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body> 
     <header>
-    </header>
-
-    <main>
-        <nav role="navigation" arial-label="main menu">
-            <ul>
+        <div class="logo">
+            <img src="images/header_photo_150.jpg" width="150" hight="148">
+        </div>
+        <div class="name">
+            <h1>Harikrishna Sahu</h1>
+            <p>Welcome to my Website!</p>
+        </div>
+        <nav class="right" role="navigation" arial-label="main menu">
+            <ul class="navbar">
                 <li><a href="">Home</a></li>
                 <li><a href="profile/index.html">Profile</a></li>
                 <li><a href="research/index.html">Research</a></li>
@@ -23,62 +28,63 @@
                 <li><a href="contact/index.html">Contact</a></li>
             </ul>
         </nav>
-
-
-        <section>
-            <h1> Harikrishna&nbsp;Sahu</h1>
-            <img src="images/hari-photo1.jpeg" alt="Photo of Harikrishna Sahu" width="1243" hight="1280">
-            <p> Research Scientist II, Georgia Tech, USA </p>
-            <p> Dr. Sahu joined Georgia Tech as a postdoc in September 2019.  Prior to joining Georgia Tech, he was a postdoc
-                fellow at Nanjing University, China. He received his M.Sc. degree in Chemistry at National Institute of Technology
-                Rourkela and a Ph.D. degree in computational chemistry at Indian Institute of Technology Guwahati. His research focuses
-                on developing and applying computational and machine learning tools to accelerate materials discovery.
-            </p>
-        </section>
-
-        <section>
-          <h1> Notable Contributions </h1>  
-          <p> My research mostly contributes to the development of organic materials for next-generation electronic devices. </p>
-          <ul>
-            <li>
-                <h2>Polymer Structure Predictor </h2>
-                <p> PSP is an autonomous polymer model generator, to build a hierarchy of polymer models, ranging from oligomers to
-                    infinite chains to crystals to amorphous models, using simplified molecular-input line-entry system (SMILES) strings
-                    of polymers. Being a first of its kind, it will facilitate automation in polymer property prediction and design.
+    </header>
+    <div class="home">
+        <main class="content-wrapper">
+            <div class="empty-block-1"></div>
+            <section>
+                <img src="images/hari-photo_500.jpg" srcset="images/hari-photo_1000.jpg 2x" alt="Photo of Harikrishna Sahu" width="500" hight="515">
+                <p> Research Scientist II, Georgia Tech, USA </p>
+                <p> Dr. Sahu joined Georgia Tech as a postdoc in September 2019.  Prior to joining Georgia Tech, he was a postdoc
+                    fellow at Nanjing University, China. He received his M.Sc. degree in Chemistry at National Institute of Technology
+                    Rourkela and a Ph.D. degree in computational chemistry at Indian Institute of Technology Guwahati. His research focuses
+                    on developing and applying computational and machine learning tools to accelerate materials discovery.
                 </p>
-            </li>
-            <li>
-                <h2> Organic Solar Cell </h2>
-                <p>
-                    High performing machine learning models are established to predict the PCE, Voc, Jsc, and FF, using relevant quantum
-                    chemical properties of donor/acceptor materials in organic solar cells. This study demonstrates how to design organic materials
-                    for a specific photovoltaic application.
+            </section>
+
+            <section>
+            <h1> Notable Contributions </h1>  
+            <p> My research mostly contributes to the development of organic materials for next-generation electronic devices. </p>
+            <ul>
+                <li>
+                    <h2>Polymer Structure Predictor </h2>
+                    <p> PSP is an autonomous polymer model generator, to build a hierarchy of polymer models, ranging from oligomers to
+                        infinite chains to crystals to amorphous models, using simplified molecular-input line-entry system (SMILES) strings
+                        of polymers. Being a first of its kind, it will facilitate automation in polymer property prediction and design.
+                    </p>
+                </li>
+                <li>
+                    <h2> Organic Solar Cell </h2>
+                    <p>
+                        High performing machine learning models are established to predict the PCE, Voc, Jsc, and FF, using relevant quantum
+                        chemical properties of donor/acceptor materials in organic solar cells. This study demonstrates how to design organic materials
+                        for a specific photovoltaic application.
+                    </p>
+
+                </li>
+                <li>
+                    <h2> Conducting Polymer </h2>
+                    <p>
+                        Conjugated polymers with high electrical conductivity are beneficial for thermoelectrics applications. Machine learning models
+                        are established to predict the electrical conductivity of p-doped polymers. Five hundred promising candidates are selected by performing
+                        high-throughput virtual screening of 845,000 candidates. New design guidelines are also established.
+                    </p>
+                </li>
+            </ul>
+            </section>
+
+            <section>
+                <h1> Ramprasad Group </h1>
+                <img src="images/ramprasad_group.jpeg" alt="Photo of Ramprasad Group" width="1024" height="768">
+                <p> 
+                    Currently, I am working as a Research Scientist in the Ramprasad group, Georgia Tech, USA. Professor Ramprasad is an eminent scientist in the field of polymer informatics.
                 </p>
-
-            </li>
-            <li>
-                <h2> Conducting Polymer </h2>
-                <p>
-                    Conjugated polymers with high electrical conductivity are beneficial for thermoelectrics applications. Machine learning models
-                    are established to predict the electrical conductivity of p-doped polymers. Five hundred promising candidates are selected by performing
-                    high-throughput virtual screening of 845,000 candidates. New design guidelines are also established.
-                </p>
-            </li>
-        </ul>
-        </section>
-
-        <section>
-            <h1> Ramprasad Group </h1>
-            <img src="images/ramprasad_group.jpeg" alt="Photo of Ramprasad Group" width="1024" height="768">
-            <p> 
-                Currently, I am working as a Research Scientist in the Ramprasad group, Georgia Tech, USA. Professor Ramprasad is an eminent scientist in the field of polymer informatics.
-            </p>
-        </section>
-    </main>
-
-    <footer>
-        <small>The webpage is developed by &copy;academic-record</small>
-    </footer>
+            </section>
+        </main>
+        <footer>
+            <small>The webpage is developed by &copy;academic-record</small>
+        </footer>
+    </div>
 </body>
 
 </html>
