update main and CV

--- a/0/profile/index.html
+++ b/0/profile/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../images/header_photo_150.jpg" width="150" hight="148">
+            <img src="../images/header_photo_transparent.png" width="150" hight="148">
         </div>
         <div class="name">
             <h1>Harikrishna Sahu</h1>
@@ -31,6 +31,7 @@
     </header>
 
     <main>
+        <a class="btn download-link"href="../cv/Curriculum_Vitae_Hari.pdf">Download PDF</a>
         <section>
             <ul>
                 <li>Research Scientist II, Georgia Tech, USA. (May 2023 - present)</li>
