--- a/0/contact/index.html
+++ b/0/contact/index.html
@@ -13,7 +13,7 @@
 <body> 
     <header>
         <div class="logo">
-            <img src="../images/header_photo_150.jpg" width="150" hight="148">
+            <img src="../images/header_photo_transparent.png" width="150" hight="148">
         </div>
         <div class="name">
             <h1>Harikrishna Sahu</h1>
