--- a/0/profile/index.html
+++ b/0/profile/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <a class="btn download-link"href="../cv/Curriculum_Vitae_Hari.pdf">Download PDF</a>
+        <a class="btn download-link"href="../cv/Harikrishna_Sahu.pdf">Download PDF</a>
         <section>
             <ul>
                 <li>Research Scientist II, Georgia Tech, USA. (May 2023 - present)</li>
