--- a/0/index.html
+++ b/0/index.html
@@ -50,6 +50,11 @@
                 <p> My research mostly contributes to the development of organic materials for next-generation electronic devices. </p>
                 <ul>
                     <li>
+                        <h2>polyT5: A Polymer-Focused Language Model</h2>
+                        <p> polyT5 is a polymer-specific encoder–decoder language model designed to understand polymer chemistry, predict key properties, and generate new polymers tailored to targeted performance. It enables direct design of synthesizable polymers without exhaustive enumeration. Applied to dielectric polymer discovery, polyT5 proposed over 20,000 promising candidates, one of which was experimentally validated, establishing a fast AI-driven pathway for accelerated polymer innovation.
+                        </p>
+                    </li>
+                    <li>
                         <h2>Polymer Structure Predictor </h2>
                         <p> PSP is an autonomous polymer model generator, to build a hierarchy of polymer models, ranging from oligomers to
                             infinite chains to crystals to amorphous models, using simplified molecular-input line-entry system (SMILES) strings
@@ -64,14 +69,6 @@
                             for a specific photovoltaic application.
                         </p>
 
-                    </li>
-                    <li>
-                        <h2> Conducting Polymer </h2>
-                        <p>
-                            Conjugated polymers with high electrical conductivity are beneficial for thermoelectrics applications. Machine learning models
-                            are established to predict the electrical conductivity of p-doped polymers. Five hundred promising candidates are selected by performing
-                            high-throughput virtual screening of 845,000 candidates. New design guidelines are also established.
-                        </p>
                     </li>
                 </ul>
                 </section>
